syntax = "proto3";
package irita.opb;

import "gogoproto/gogo.proto";

option go_package = "github.com/bianjieai/irita/modules/opb/types";
option (gogoproto.goproto_getters_all)  = false;

// Msg defines the OPB Msg service.
service Msg {
    // Mint defines a method for minting the base native token.
    rpc Mint(MsgMint) returns (MsgMintResponse);

    // Reclaim defines a method for reclaiming the specified native token
    // from the corresponding escrow.
    rpc Reclaim(MsgReclaim) returns (MsgReclaimResponse);

    rpc AddToContractDenyList(MsgAddToContractDenyList) returns (MsgAddToContractDenyListResponse);

    rpc RemoveFromContractDenyList(MsgRemoveFromContractDenyList) returns (MsgRemoveFromContractDenyListResponse);
}

// MsgMint defines a message to mint the base native token.
message MsgMint {
    option (gogoproto.equal) = true;

    uint64 amount = 1;
    string recipient = 2;
    string operator = 3;
}

// MsgMintResponse defines the Msg/Mint response type.
message MsgMintResponse {}

// MsgReclaim defines a message to reclaim the specified native token.
message MsgReclaim {
    option (gogoproto.equal) = true;

    string denom = 1;
    string recipient = 2;
    string operator = 3;
}

// MsgReclaimResponse defines the Msg/Reclaim response type.
message MsgReclaimResponse {}

message MsgAddToContractDenyList {

    string contract_address = 1;

    string from =2;
}

message MsgAddToContractDenyListResponse{}


message MsgRemoveFromContractDenyList {

    string contract_address = 1;

    string from =2;
}
message MsgRemoveFromContractDenyListResponse{}